add preview images for samples, add new sample player