@@ -74,7 +74,37 @@ dependencies {
     //osgiRuntime project(':org.eclipse.fx.drift.samples.cpp')
 }
 
+task runPlayer(type: JavaExec) {
+	group = 'application'
+	description = 'Runs this project as Java 11 application'
+	
+	executable = "${System.getenv('JAVA_HOME_11')}/bin/java"
+	def modules = sourceSets.main.runtimeClasspath.filter { jar -> jar.getName().contains('javafx-') } .getAsPath()
+	classpath = sourceSets.main.runtimeClasspath
+	main = 'org.eclipse.fx.drift.samples.SamplePlayerApp'
+	jvmArgs = [
+		'--module-path', modules,
+		'--add-modules', 'javafx.controls',
+		'--add-exports', 'javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED',
+		'--add-exports', 'javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED', 
+		'--add-exports', 'javafx.graphics/com.sun.javafx.util=ALL-UNNAMED', 
+		'--add-exports', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED', 
+		'--add-exports', 'javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED', 
+		'--add-exports', 'javafx.graphics/com.sun.javafx.geom.transform=ALL-UNNAMED', 
+		'--add-exports', 'javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED', 
+		'--add-exports', 'javafx.graphics/com.sun.javafx.font=ALL-UNNAMED', 
+		'--add-exports', 'javafx.graphics/com.sun.prism.paint=ALL-UNNAMED', 
+		'--add-opens', 'javafx.graphics/com.sun.prism=ALL-UNNAMED',
+		'--add-opens', 'javafx.graphics/com.sun.prism.es2=ALL-UNNAMED', 
+		'--add-opens', 'javafx.graphics/com.sun.prism.d3d=ALL-UNNAMED', 
+		'--add-opens', 'javafx.graphics/com.sun.prism.impl=ALL-UNNAMED'	
+	]
 
+	systemProperty "driftfx.showfps", true
+	systemProperty "driftfx.use.java.library.path", System.getProperty("driftfx.use.java.library.path")
+	systemProperty "java.library.path", System.getProperty("java.library.path")
+	systemProperty "driftfx.loglevel", System.getProperty("driftfx.loglevel")
+}
 
 
 task run11(type: JavaExec) {
